# yolov8_volleyball

./: CMakeLists.txt  HK.py  README.md  config.json  main.cpp  main_old.cpp.back  run.sh  start.sh  volleyball  yolov8_openvino_inference.py  yolov8_openvino_old.py
camera/: hikvision_wrapper.cpp  hikvision_wrapper.hpp
data/best_openvino_model_shufv2/: best.xml  metadata.yaml
data/best_openvino_nanodet/: nanodet_ir.xml
detect/: detect.cpp  detect.hpp
general/: common_struct.hpp  debug.hpp  structs.hpp
serial/: serial.cpp  serial.hpp
